# neomacs

./: .gitignore  README.md  configure.ac  flake.nix
docs/: elisp-core-analysis.md  elisp-vm-design.md  neovm-rfc-modular-multithread.md  neovm-untracked-elisp-port-inventory.md  ongoing-tasks.md  plan.md
lisp/: frame.el  neo-term.el  neomacs-webkit.el
nix/: neomacs.nix
rust/neomacs-display/: Cargo.toml  cbindgen.toml  shell.nix
rust/neomacs-display/include/: neomacs_display.h
rust/neomacs-display/src/: effect_config.rs  ffi.rs  lib.rs  render_thread.rs  thread_comm.rs
rust/neomacs-display/src/backend/: mod.rs
rust/neomacs-display/src/backend/gtk4/: gsk_renderer.rs  hybrid_renderer.rs  hybrid_renderer_pango.rs.bak  image.rs  mod.rs  renderer.rs  widget.rs
rust/neomacs-display/src/backend/tty/: mod.rs
rust/neomacs-display/src/backend/webkit/: cache.rs  view.rs
rust/neomacs-display/src/backend/wgpu/: backend.rs  drm_device.rs  events.rs  external_buffer.rs  glyph_atlas.rs  image_cache.rs  mod.rs  renderer.rs  vertex.rs  video_cache.rs  vulkan_dmabuf.rs  webkit_cache.rs
rust/neomacs-display/src/backend/wgpu/renderer/: content.rs  glyphs.rs  mod.rs  overlays.rs
rust/neomacs-display/src/backend/wgpu/shaders/: rounded_rect.wgsl
rust/neomacs-display/src/backend/wpe/: backend.rs  dmabuf.rs  mod.rs  platform.rs  sys.rs  view.rs  view_cache.rs
rust/neomacs-display/src/core/: animation.rs  casefiddle.rs  chartab.rs  composite.rs  face.rs  frame_glyphs.rs  itree.rs  mod.rs  profiler.rs  region_cache.rs  scene.rs  scroll_animation.rs  search.rs  textprop.rs
rust/neomacs-display/src/core/regex/: compile.rs  engine.rs  mod.rs  types.rs
rust/neomacs-display/src/ffi/: animation.rs  glyph_rows.rs  image.rs  mod.rs  scene.rs  threaded.rs
rust/neomacs-display/src/layout/: bidi_layout.rs  emacs_ffi.rs  engine.rs  font_metrics.rs  hit_test.rs  mod.rs  status_line.rs  types.rs  unicode.rs
rust/neomacs-display/src/render_thread/: child_frames.rs  input.rs  mod.rs  popup_menu.rs  transitions.rs
rust/neomacs-display/src/text/: atlas.rs  engine.rs  mod.rs
rust/neomacs-display/tests/: threaded_test.rs
rust/neovm-core/: Cargo.toml
rust/neovm-core/examples/: compat_runner.rs
rust/neovm-core/src/: elisp.rs  encoding.rs  lib.rs  window.rs
rust/neovm-core/src/buffer/: buffer.rs  mod.rs  overlay.rs  text_props.rs
rust/neovm-core/src/elisp/: abbrev.rs  bookmark.rs  buffer.rs  builtin_registry.rs  builtins.rs  builtins_extra.rs  casefiddle.rs  casetab.rs  category.rs  ccl.rs  charset.rs  chartable.rs  cl_lib.rs  coding.rs  compiled_literal.rs  composite.rs  custom.rs  dired.rs  display.rs  doc.rs  editfns.rs  error.rs  errors.rs  eval.rs  expr.rs  fileio.rs  floatfns.rs  fns.rs  font.rs  format.rs  hashtab.rs  image.rs  indent.rs  interactive.rs  isearch.rs  json.rs  keymap.rs  kill_ring.rs  kmacro.rs  load.rs  (+27 more)
rust/neovm-core/src/elisp/buffer/: args.rs  pure.rs  stateful.rs  tests.rs
rust/neovm-core/src/elisp/bytecode/: compiler.rs  opcode.rs  vm.rs
rust/neovm-worker/: Cargo.toml
rust/neovm-worker/examples/: elisp_bench.rs  elisp_compat_runner.rs
rust/neovm-worker/src/: lib.rs
src/: Makefile.in  (+21 more)
(+642 files in other folders)
