[package]
name = "neomacs-display"
version = "0.1.0"
edition = "2021"
authors = ["Neomacs Contributors"]
license = "GPL-3.0-or-later"
description = "GPU-accelerated display engine for Neomacs"
repository = "https://github.com/eval-exec/neomacs-1"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Text rendering - Pure Rust stack
cosmic-text = "0.12"

# Vulkan for DMA-BUF import (WPE WebKit integration)
ash = { version = "0.38", optional = true }

# GStreamer for video
gstreamer = { version = "0.23", optional = true }
gstreamer-video = { version = "0.23", optional = true }
gstreamer-app = { version = "0.23", optional = true }
gstreamer-allocators = { version = "0.23", optional = true }

# Winit + wgpu backend
winit = { version = "0.30", optional = true }
wgpu = { version = "23", optional = true }
# wgpu-hal for low-level Vulkan access (DMA-BUF import)
wgpu-hal = { version = "23", features = ["vulkan"], optional = true }
raw-window-handle = { version = "0.6", optional = true }
arboard = { version = "3.4", optional = true }
bytemuck = { version = "1.18", features = ["derive"], optional = true }
pollster = { version = "0.4", optional = true }

# Image decoding (async)
image = { version = "0.24", optional = true }

# WPE WebKit - bindings generated via bindgen in build.rs
# No crate dependency - we generate sys bindings directly

# Utilities
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
bitflags = "2.0"
once_cell = "1.19"

# FFI
libc = "0.2"

[build-dependencies]
cbindgen = "0.27"
which = "7.0"
bindgen = "0.71"
pkg-config = "0.3"

[features]
# Default: winit-wgpu backend with video and webkit support
default = ["winit-backend", "video", "wpe-webkit"]
winit-backend = ["winit", "wgpu", "raw-window-handle", "arboard", "bytemuck", "pollster", "image"]
tty-backend = []
# Video with GStreamer - includes ash and wgpu-hal for DMA-BUF zero-copy
video = ["gstreamer", "gstreamer-video", "gstreamer-app", "gstreamer-allocators", "winit-backend", "ash", "wgpu-hal"]
# wpe-webkit requires winit-backend and ash for Vulkan DMA-BUF import
wpe-webkit = ["winit-backend", "ash"]

[profile.release]
lto = true
codegen-units = 1

[profile.dev]
