[package]
name = "neovm-core"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Core runtime structures for NeoVM"

[features]
default = ["core-backend-emacs-c"]
core-backend-emacs-c = []
core-backend-rust = []

[dependencies]
neovm-host-abi = { path = "../neovm-host-abi" }
regex = "1"
strum = { version = "0.26", features = ["derive"] }
